# Multi-Feed-Alpha-Generation-System

./: CMakeLists.txt  README.md  docker-compose.yml  grafana-dashboard.json
grafana-provisioning/dashboards/: alpha-live.json  dashboard.yml
grafana-provisioning/datasources/: influxdb.yml
include/alpha/: alpha_engine.h  indicators.h  microstructure.h  orderflow.h  regime.h  vwap.h
include/backtest/: backtester.h  pnl.h  sharpe.h
include/feeds/: binance_feed.h  candle_aggregator.h  coinbase_feed.h  polygon_feed.h
include/storage/: influx_writer.h
include/util/: market_types.h
src/: main.cpp
src/alpha/: alpha_engine.cpp  indicators.cpp  microstructure.cpp  orderflow.cpp  regime.cpp  vwap.cpp
src/backtest/: backtester.cpp  pnl.cpp  sharpe.cpp
src/feeds/: binance_feed.cpp  candle_aggregator.cpp  coinbase_feed.cpp  polygon_feed.cpp
src/storage/: influx_writer.cpp
